headline font, language toggle styling, footer wrapping

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
 	<div class="footer">
 		<div class="container">
 			<div class="row">
-				<div class="col-md-10 nav-items">
+				<div class="col-xs-10 nav-items">
 					<ul>
 						<li{% if page.menu_team %} class="active"{% endif %}><a href="{{ site.baseurl }}/team/">{% t navig.Team %}</a></li>
 						<li{% if page.menu_vorstand %} class="active"{% endif %}><a href="{{ site.baseurl }}/vorstand/">{% t navig.Vorstand %}</a></li>
@@ -12,7 +12,7 @@
 						<li{% if page.menu_impressum %} class="active"{% endif %}><a href="{{ site.baseurl }}/impressum/">{% t navig.Impressum %}</a></li>
 					</ul>
 				</div>
-				<div class="col-md-2 nav-items nav-items-right">
+				<div class="col-xs-2 nav-items nav-items-right">
 					<ul>
 						<li><a href="https://twitter.com/okfde" title="OKF auf Twitter"><i class="icon-twitter"></i></a></li>
 						<li><a href="https://github.com/okfde" title="OKF auf Github"><i class="icon-github"></i></a></li>
