--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,20 +8,23 @@
 	</a>
 	<nav class="header-nav nav-items">
 		<ul>
-			<li>
-					{% if site.lang == "de" %}
-					{% capture link1 %}{{ site.baseurl_root }}/en{{ page.url |replace_first:"index.html"}}{% endcapture %}
-					<a class="nav-link" href="{{ link1 }}" >EN - </a>
-					{% else if site.lang == "en" %}
-					{% capture link2 %}{{ site.baseurl_root }}{{ page.url |replace_first:"index.html" }}{% endcapture %}
-					<a class="nav-link" href="{{ link2 }}" >DE - </a>
-					{% endif %}
-			</li>
 			<li{% if page.menu_themen %} class="active"{% endif %}><a class="nav-link" href="{{ site.baseurl }}/themen/">{% t navig.Themen %}</a></li>
 			<li{% if page.menu_projekte %} class="active"{% endif %}><a class="nav-link" href="{{ site.baseurl }}/projekte/">{% t navig.Projekte %}</a></li>
 			<li{% if page.menu_blog %} class="active"{% endif %}><a class="nav-link" href="{{ site.baseurl }}/blog/">{% t navig.Blog %}</a></li>
 			<li{% if page.menu_services %} class="active"{% endif %}><a class="nav-link" href="{{ site.baseurl }}/services/">{% t navig.Services %}</a></li>
 			<li{% if page.menu_spenden %} class="active"{% endif %}><a class="nav-link" href="{{ site.baseurl }}/spenden/">{% t navig.Spenden %}</a></li>
+			<li>
+				<div class="language-toggle">
+				{% if site.lang == "de" %}
+				{% capture link1 %}{{ site.baseurl_root }}/en{{ page.url |replace_first:"index.html"}}{% endcapture %}
+				<a href="{{ link1 }}" >EN</a><br/>DE
+				{% else if site.lang == "en" %}
+				{% capture link2 %}{{ site.baseurl_root }}{{ page.url |replace_first:"index.html" }}{% endcapture %}
+				EN<br/><a href="{{ link2 }}">DE</a>
+				{% endif %}
+				</div>
+			</li>
+
 		</ul>
 	</nav>
 	<a id="sidebar-trigger" href><span class="cd-menu-text">{% t navig.Mehr %}</span><span class="cd-menu-icon"></span></a>
