--- a/static/style/style.scss
+++ b/static/style/style.scss
@@ -444,6 +444,7 @@ header {
 .language-toggle {
   font-size: 14px;
   line-height:16px;
+  margin-left: 8px;
   color: #939393;
   position:relative;
   top: 7px;
