header styling fix (use white color)

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,18 +4,18 @@
 			<div class="row">
 				<div class="col-xs-10 nav-items">
 					<ul>
-						<li{% if page.menu_team %} class="active"{% endif %}><a href="{{ site.baseurl }}/team/">{% t navig.Team %}</a></li>
-						<li{% if page.menu_vorstand %} class="active"{% endif %}><a href="{{ site.baseurl }}/vorstand/">{% t navig.Vorstand %}</a></li>
-						<li{% if page.menu_verein %} class="active"{% endif %}><a href="{{ site.baseurl }}/verein/">{% t navig.Verein %}</a></li>
-						<li{% if page.menu_presse %} class="active"{% endif %}><a href="{{ site.baseurl }}/presse/">{% t navig.Presse %}</a></li>
-						<li{% if page.menu_jobs %} class="active"{% endif %}><a href="{{ site.baseurl }}/jobs/">{% t navig.Jobs %}</a></li>
-						<li{% if page.menu_impressum %} class="active"{% endif %}><a href="{{ site.baseurl }}/impressum/">{% t navig.Impressum %}</a></li>
+						<li{% if page.menu_team %} class="active"{% endif %}><a class="nav-link" href="{{ site.baseurl }}/team/">{% t navig.Team %}</a></li>
+						<li{% if page.menu_vorstand %} class="active"{% endif %}><a class="nav-link" href="{{ site.baseurl }}/vorstand/">{% t navig.Vorstand %}</a></li>
+						<li{% if page.menu_verein %} class="active"{% endif %}><a class="nav-link" href="{{ site.baseurl }}/verein/">{% t navig.Verein %}</a></li>
+						<li{% if page.menu_presse %} class="active"{% endif %}><a class="nav-link" href="{{ site.baseurl }}/presse/">{% t navig.Presse %}</a></li>
+						<li{% if page.menu_jobs %} class="active"{% endif %}><a class="nav-link" href="{{ site.baseurl }}/jobs/">{% t navig.Jobs %}</a></li>
+						<li{% if page.menu_impressum %} class="active"{% endif %}><a class="nav-link" href="{{ site.baseurl }}/impressum/">{% t navig.Impressum %}</a></li>
 					</ul>
 				</div>
 				<div class="col-xs-2 nav-items nav-items-right">
 					<ul>
-						<li><a href="https://twitter.com/okfde" title="OKF auf Twitter"><i class="icon-twitter"></i></a></li>
-						<li><a href="https://github.com/okfde" title="OKF auf Github"><i class="icon-github"></i></a></li>
+						<li><a class="nav-link" href="https://twitter.com/okfde" title="OKF auf Twitter"><i class="icon-twitter"></i></a></li>
+						<li><a class="nav-link" href="https://github.com/okfde" title="OKF auf Github"><i class="icon-github"></i></a></li>
 					</ul>
 				</div>
 			</div>
