translate start-page

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -26,11 +26,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-8">
-					<p>
-						Open Knowledge Foundation Deutschland e.V. ist ein eingetragener
-						Verein, Vereinsregister-Nr. VR 30468 B. Die Inhalte dieser Webseite
-						sind, sofern nicht anders angegeben, nach <a href="https://creativecommons.org/licenses/by/3.0/de/">Creative Commons 3.0 Attribution</a> lizensiert.
-					</p>
+					<p>{% t footer.license %}</p>
 				</div>
 				<div class="col-md-3 col-md-offset-1">
 					<a href="{{ site.baseurl }}"><img class="logo-cellar" src="{{site.staticurl}}images/logo_footer.png" alt="Open Knowldege Foundation Deutschland e.V."></a>
