translate blog page

--- a/_includes/pagination.html
+++ b/_includes/pagination.html
@@ -41,28 +41,27 @@
 {% endfor %}
 {% endif %}
 
-<p id="pagination-label" class="pagination-label sr-only" aria-hidden="true">Pagination</p>
-
+<p id="pagination-label" class="pagination-label sr-only" aria-hidden="true">{% t pagination.Seiten %}</p>
 <ul class="blog-pagination" role="navigation" aria-labelledby="pagination-label">
 
 	{% if paginator.previous_page %}
 	<li class="previous">
 		{% if paginator.previous_page == 1 %}
-		<a class="pagination-item" href="{{ site.baseurl }}/blog" rel="prev">Vorherige<span class="sr-only"> Seite</span></a>
+		<a class="pagination-item" href="{{ site.baseurl }}/blog" rel="prev">{% t pagination.Vorherige %}<span class="sr-only"> {% t pagination.Seite %}</span></a>
 		{% else %}
-		<a class="pagination-item" href="{{ paginator.previous_page_path }}" rel="prev">Vorherige<span class="sr-only"> Seite</span></a>
+		<a class="pagination-item" href="{{ site.baseurl }}{{ paginator.previous_page_path }}" rel="prev">{% t pagination.Vorherige %}<span class="sr-only"> {% t pagination.Seite %}</span></a>
 		{% endif %}
 	</li>
 	{% endif %}
 
 	{% unless paginator.page == 1 %}
 	<li class="page first">
-		<a class="pagination-item" href="{{ site.baseurl }}/blog"><span class="sr-only">Seite </span>1</a>
+		<a class="pagination-item" href="{{ site.baseurl }}/blog"><span class="sr-only">{% t pagination.Seite %} </span>1</a>
 	</li>
-	<li class="pages-indicator{{ indicator_first }} pages-indicator--offset-{{ relative_first }}"><span aria-hidden="true">...</span><span class="sr-only">Übersprungen</span></li>
+	<li class="pages-indicator{{ indicator_first }} pages-indicator--offset-{{ relative_first }}"><span aria-hidden="true">...</span><span class="sr-only">{% t pagination.Uebersprungen %}</span></li>
 	{% else %}
 	<li class="page first current-page">
-		<span class="pagination-item"><span class="sr-only">Aktuelle Seite</span><span aria-hidden="true">1</span></span>
+		<span class="pagination-item"><span class="sr-only">{% t pagination.Aktuelle %} {% t pagination.Seite %}</span><span aria-hidden="true">1</span></span>
 	</li>
 	{% endunless %}
 
@@ -72,7 +71,7 @@
 	{% unless count == totalpages %}
 	<li class="page offset-{{relative_to_current}}{% if count == paginator.page %} current-page{% endif %}">
 		{% if count == paginator.page %}
-		<span class="pagination-item"><span class="sr-only">Aktuelle Seite</span><span aria-hidden="true">{{ count }}</span></span>
+		<span class="pagination-item"><span class="sr-only">{% t pagination.Aktuelle %} {% t pagination.Seite %}</span><span aria-hidden="true">{{ count }}</span></span>
 		{% else %}
 		<a class="pagination-item" href="{{ site.baseurl }}/blog/page/{{ count }}"><span class="sr-only">page </span>{{ count }}</a>
 		{% endif %}
@@ -82,19 +81,19 @@
 	{% endfor %}
 
 	{% unless paginator.page == totalpages %}
-	<li class="pages-indicator{{ indicator_last }} pages-indicator--offset-{{ relative_last }}"><span aria-hidden="true">...</span><span class="sr-only">Übersprungen</span></li>
+	<li class="pages-indicator{{ indicator_last }} pages-indicator--offset-{{ relative_last }}"><span aria-hidden="true">...</span><span class="sr-only">{% t pagination.Uebersprungen %}</span></li>
 	<li class="page last">
 		<a class="pagination-item" href="{{ site.baseurl }}/blog/page/{{ totalpages }}"><span class="sr-only">page </span>{{ totalpages }}</a>
 	</li>
 	{% else %}
 	<li class="page last current-page">
-		<span class="pagination-item"><span class="sr-only">Aktuelle Seite</span><span aria-hidden="true">{{ totalpages }}</span></span>
+		<span class="pagination-item"><span class="sr-only">{% t pagination.Aktuelle %} {% t pagination.Seite %}</span><span aria-hidden="true">{{ totalpages }}</span></span>
 	</li>
 	{% endunless %}
 
 	{% if paginator.next_page %}
 	<li class="next">
-		<a class="pagination-item" href="{{ paginator.next_page_path }}" rel="next">Nächste<span class="sr-only"> Seite</span></a>
+		<a class="pagination-item" href="{{ site.baseurl }}{{ paginator.next_page_path }}" rel="next">{% t pagination.Naechste %}<span class="sr-only"> {% t pagination.Seite %}</span></a>
 	</li>
 	{% endif %}
 </ul>
