--- a/_includes/project_list.html
+++ b/_includes/project_list.html
@@ -7,7 +7,9 @@
 			<div class="project-box-image{% unless project.img.size > 0 %} project-box-color{% endunless %}" {% if project.img.size> 0 %}style="background-image: url('{{ site.staticurl }}images/{{ project.img }}');'"{% endif %}></div>
 			<div class="project-box-inner">
 				<h3>{{ project.title }}</h3>
+				{{ if project.subtitle!='' }}
 				{% unless style == 'mini' %}<p>{{ project.subtitle }}</p>{% endunless %}
+				{{ endif}}
 			</div>
 		</a>
 	</div>
