--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   {% if page.home %}
-  <title>Open Knowledge Foundation Deutschland</title>
+  <title>Open Knowledge Foundation Deutschland - Offenes Wissen für die digitale Gesellschaft</title>
   {% else %}
   <title>{% t page.title %} &gt; Open Knowledge Foundation Deutschland</title>
   {% endif %}
