--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,84 +4,76 @@ menu_blog: yes
 ---
 {% assign author = site.data.team | where:"name",page.author | first %}
 <div class="lurking-header post">
-  <div{% if author.img %} class="post-author"{% else %} class="post-nonteam-author" {% endif %}>
-    {% if author.img %}<img src="{{ site.staticurl }}images/team/{{ author.img }}_square.jpg" alt="{{ author.name }}" class="img-circle">{% endif %}
-    <p class="post-meta">
-      {% if author.name %}
-        {% t blog.Von %} <a href="{{ site.baseurl }}/{% if author.staff %}team{% else %}vorstand{% endif %}#{{ author.name | slugify }}">{{ author.name }}</a><br/>
-      {% else %}
-        {% t blog.Von %} {{ page.author }}
-      {% endif %}
-      {% t blog.AmDatum %} {{ page.date | date:"%d.%m.%Y" }}
-      <ul class="post-tags">
-        {% for tag in page.tags %}
-        <li><span class="badge">{{ tag }}</span></li>
-        {% endfor %}
-      </ul>
-    </p>
-  </div>
-  <h1>{{ page.title }}</h1>
-  {% if page.image %}
-  <div class="post-image-full" style="background-image: url({{ page.image.src }});" title="{{ page.image.title }}"></div>
-  {% endif %}
-  <div class="post-content">{{ content }}</div>
+	<div {% if author.img %} class="post-author" {% else %} class="post-nonteam-author" {% endif %}>
+		{% if author.img %}<img src="{{ site.staticurl }}images/team/{{ author.img }}_square.jpg" alt="{{ author.name }}" class="img-circle">{% endif %}
+		<p class="post-meta">
+			{% if author.name %}
+			{% t blog.Von %} <a href="{{ site.baseurl }}/{% if author.staff %}team{% else %}vorstand{% endif %}#{{ author.name | slugify }}">{{ author.name }}</a><br/>
+			{% else %}
+			{% t blog.Von %} {{ page.author }}
+			{% endif %}
+			{% t blog.AmDatum %} {{ page.date | date:"%d.%m.%Y" }}
+		<ul class="post-tags">
+			{% for tag in page.tags %}
+			<li><span class="badge">{{ tag }}</span></li>
+			{% endfor %}
+		</ul>
+		</p>
+	</div>
+	<h1>{{ page.title }}</h1>
+	{% if page.image %}
+	<div class="post-image-full" style="background-image: url({{ page.image.src }});" title="{{ page.image.title }}"></div>
+	{% endif %}
+	<div class="row">
+		<div class="col-md-10 col-md-offset-1">
+			<div class="post-content">{{ content }}</div>
+		</div>
+	</div>
 </div>
 
-{% assign postsTitlesArray = '' | split:':' %}
-
-{% for post in site.related_posts%}
-  {% for tag in page.tags %}
-    {% unless tag == 'Deutschland' %}
-      {% if post.tags contains tag %}
-        {% if postsTitlesArray contains post %}
-        {% else %}
-          {% assign postsTitlesArray = postsTitlesArray | push: post %}
-        {% endif %}
-      {% endif %}
-    {% endunless %}
-  {% endfor %}
+{% assign relatedPosts = site.related_posts %}
+{% assign relatedArray = '' | split:':' %}
+{% for post in relatedPosts | limit: 4 %}
+	{% assign relatedArray = relatedArray | push: post %}
 {% endfor %}
-
-{% assign thesize = postsTitlesArray.size %}
-{% capture thesize %}{{ postsTitlesArray.size }}{% endcapture %}
+{% capture thesize %}{{ relatedArray.size }}{% endcapture %}
 {% unless thesize == '0' %}
-<div class="row related-post post">
-  <div class="col-md-12">
-    <h3>{% t blog.VerwandteBeitraege %}</h3>
-    <ul>
-      {% for post in postsTitlesArray | limit:3 %}
-      <li><a href="{{ site.baseurl }}/{{ post.url|replace_first:'/',''|replace_first:'index.html',''}}">{{ post.title }}</a></li>
-      {% endfor %}
-    </ul>
-  </div>
-</div>
+	<h3 class="subtle-section">{% t blog.VerwandteBeitraege %}</h3>
+	{% include post_previews.html posts=relatedArray %}
 {% endunless %}
 
-<div class="row broad-header post">
-  {% if page.previous.url and page.next.url %}
-    {% assign cols=2 %}
-  <div class="col-md-12">
-  {% else %}
-    {% assign cols=1 %}
-  <div class="col-md-offset-3 col-md-6">
-  {% endif %}
-    <div class="row">
-      {% if page.previous.url %}
-        <div class="{% if cols == 2 %}col-md-6{% else %}cols-md-12{% endif %}">
-			<a href="{{ site.baseurl }}/{{ page.previous.url |replace_first:'/',''}}">
-          <h3 class="subtle-section"><i class="icon-left-open"></i> {% t blog.VorherigerBeitrag %}</h3>
-	      {% include post_preview_small.html post=page.previous %}
-            </a>
-        </div>
-      {% endif %}
-      {% if page.next.url %}
-        <div class="{% if cols == 2 %}col-md-6{% else %}cols-md-12{% endif %}">
-          <a href="{{ site.baseurl }}/{{ page.next.url |replace_first:'/',''}}">
-          	<h3 class="subtle-section">{% t blog.NaechsterBeitrag %} <i class="icon-right-open"></i></h3>
-	      {% include post_preview_small.html post=page.next %}
-          </a>
-        </div>
-      {% endif %}
-    </div>
-  </div>
-</div>
+{% assign col=1 %}
+{% if page.previous.url and page.next.url %}
+{% assign col=2 %}
+{% endif %}
+<ul class="post-previews post-previews-{{ col }}">
+	{% if page.previous.url %}
+	<li class="post-preview">
+		<h3 class="subtle-section"><i class="icon-left-open"></i> {% t blog.VorherigerBeitrag %}</h3>
+	</li>
+	{% endif %}
+	{% if page.next.url %}
+	<li class="post-preview post-preview-right">
+		<h3 class="subtle-section">{% t blog.NaechsterBeitrag %} <i class="icon-right-open"></i></h3>
+	</li>
+	{% endif %}
+</ul>
+<ul class="post-previews post-previews-{{ col }}">
+	{% if page.previous.url %}
+	<li class="post-preview">
+		<div class="post-preview-content">
+			{% include post_preview_small.html post=page.previous %}
+		</div>
+	</li>
+	{% endif %}
+	{% if page.next.url %}
+	<li class="post-preview">
+		<div class="post-preview-content">
+			{% include post_preview_small.html post=page.next %}
+		</div>
+	</li>
+	{% endif %}
+</ul>
+
+
+
