--- a/_includes/post_preview.html
+++ b/_includes/post_preview.html
@@ -1,20 +1,22 @@
 {% assign post=include.post %}
-<article class="row post-item">
-	<div class="post-meta col-md-2">
-		{% if post.image %}<img class="post-img" src="{{ post.image.src }}" alt="{{ post.title }}"/>{% endif %}
+<article class="post-item">
+	<div class="post-meta">
+		<div class="post-img-wrap">
+			{% if post.image %}<img class="post-img" src="{{ post.image.src }}" alt="{{ post.title }}"/>{% endif %}
+		</div>
 		<div class="post-author">
 			<p>{{ post.date | date:"%d.%m.%Y" }}</p>
 			<p>{% t blog.Von %} {{ post.author }}</p>
 		</div>
 	</div>
-	<div class="post-teaser col-md-10">
+	<div class="post-teaser">
 		<ul class="post-tags">
 			{% for tag in post.tags %}
 			<li><span class="badge">{{ tag }}</span></li>
 			{% endfor %}
 		</ul>
 		<h3 class="post-title"><a href="{{ site.baseurl }}/{{ post.url | remove_first:'/'}}">{{ post.title }}</a></h3>
-		<p class="post-excerpt">{{ post.excerpt | strip_html | truncatewords: 50}}</p>
+		<p class="post-excerpt">{{ post.excerpt | markdownify | strip_html | truncatewords: 50}}</p>
 		<p class="post-more"><a href="{{ site.baseurl }}/{{ post.url | remove_first:'/'}}">{% t blog.Mehr %}</a></p>
 	</div>
 </article>
