--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -1,101 +1,100 @@
 ---
 layout: default
 menu_projekte: yes
-
 ---
-<div class="lurking-header">
-  <h1>{{ page.title }}</h1>
+<div class="lurking-header project">
+	<h1>{{ page.title }}</h1>
 
-  {% if page.video %}
-  <div class="videoWrapper"><iframe src="{{page.video}}" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div>
-  {% endif %}
+	{% if page.video %}
+	<div class="videoWrapper">
+		<iframe src="{{page.video}}" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+	</div>
+	{% endif %}
 
-  <div class="row">
-    <div class="col-md-10 col-md-offset-1">
-      {% capture langcontent %}{{ page[site.lang].content }}{% endcapture %}
-      {{ langcontent | markdownify }}
-      {{ content }}
-    </div>
-  </div>
+	<div class="row">
+		<div class="col-md-10 col-md-offset-1">
+			{{ page[site.lang].content | markdownify }}
 
-  {% if page.people.size > 0 %}
-    <h3>{% t projekt.Ansprechpartner %}</h3>
-    <div class="row">
-    {% for teammember in page.people %}
-      {% assign person = site.data.team | where:"name",teammember.name | first %}
-      <div class="col-md-6">
-        <div class="row">
-          {% if person %}
-          <div class="col-xs-3 avatar-col">
-            {% if person.img %}
-            <img src="{{ site.staticurl }}images/team/{{ person.img }}_square.jpg" alt="{{ person.name }}" class="img-circle avatar">
-            {% endif %}
-          </div>
-          {% endif %}
-          <div class="col-xs-9">
-            {{ teammember.name }}
-            {% if teammember.role %}
-              <br/><small>{{ teammember.role }}</small>
-            {% endif %}
-          </div>
-        </div>
-      </div>
-    {% endfor %}
-    </div>
-  {% endif %}
-  <h3>{% t projekt.MehrInformationen %}</h3>
-  <dl class="icon-list big-icon-list">
-    {% if page.contact.website %}
-      <dt><i class="icon-umbrella"></i></dt>
-      <dd>
-        <a href="{{ page.contact.website }}">{{ page.contact.website|replace_first:"http://"|replace_first:"https://" }}</a>
-      </dd>
-    {% endif %}
-    {% if page.contact.twitter %}
-      <dt><i class="icon-twitter"></i></dt>
-      <dd>
-        <a href="https://twitter.com/{{ page.contact.twitter }}">
-          {{ page.contact.twitter }}
-        </a>
-      </dd>
-    {% endif %}
-    {% if page.contact.github %}
-      <dt><i class="icon-github"></i></dt>
-      <dd>
-        <a href="{{ page.contact.github }}">{{ page.contact.github|replace_first:"https://github.com/" }}</a>
-      </dd>
-    {% endif %}
-    {% if page.contact.mail %}
-      <dt><i class="icon-paper-plane"></i></dt>
-      <dd>
-        <a href="mailto:{{ page.contact.mail }}">{{ page.contact.mail }}</a>
-      </dd>
-    {% endif %}
-    {% if page.contact.mailinglist %}
-      <dt><i class="icon-paper-plane"></i></dt>
-      <dd>
-        <a href="{{ page.contact.mailinglist }}">{% t projekt.Mailingliste %}</a>
-      </dd>
-    {% endif %}
-  </dl>
+			{% if page.people.size > 0 %}
+			<h3>{% t projekt.Ansprechpartner %}</h3>
+			<div class="row avatar-block">
+				{% for teammember in page.people %}
+				{% assign person = site.data.team | where:"name",teammember.name | first %}
+				<div class="col-md-6">
+					<div class="row avatar-row">
+						<div class="col-xs-3 avatar-col">
+							{% if person.img %}
+							<img src="{{ site.staticurl }}images/team/{{ person.img }}_square.jpg" alt="{{ person.name }}" class="img-circle avatar">
+							{% endif %}
+						</div>
+						<div class="col-xs-9">
+							{{ teammember.name }}
+							{% if teammember.role %}
+							<br/>
+							<small>{{ teammember.role }}</small>
+							{% endif %}
+						</div>
+					</div>
+				</div>
+				{% endfor %}
+			</div>
+			{% endif %}
+			<h3>{% t projekt.MehrInformationen %}</h3>
+			<dl class="icon-list big-icon-list">
+				{% if page.contact.website %}
+				<dt><i class="icon-umbrella"></i></dt>
+				<dd>
+					<a href="{{ page.contact.website }}">{{ page.contact.website|replace_first:"http://"|replace_first:"https://" }}</a>
+				</dd>
+				{% endif %}
+				{% if page.contact.twitter %}
+				<dt><i class="icon-twitter"></i></dt>
+				<dd>
+					<a href="https://twitter.com/{{ page.contact.twitter }}">
+						{{ page.contact.twitter }}
+					</a>
+				</dd>
+				{% endif %}
+				{% if page.contact.github %}
+				<dt><i class="icon-github"></i></dt>
+				<dd>
+					<a href="{{ page.contact.github }}">{{ page.contact.github|replace_first:"https://github.com/" }}</a>
+				</dd>
+				{% endif %}
+				{% if page.contact.mail %}
+				<dt><i class="icon-paper-plane"></i></dt>
+				<dd>
+					<a href="mailto:{{ page.contact.mail }}">{{ page.contact.mail }}</a>
+				</dd>
+				{% endif %}
+				{% if page.contact.mailinglist %}
+				<dt><i class="icon-paper-plane"></i></dt>
+				<dd>
+					<a href="{{ page.contact.mailinglist }}">{% t projekt.Mailingliste %}</a>
+				</dd>
+				{% endif %}
+			</dl>
+		</div>
+	</div>
 </div>
 
-<hr />
+
+<hr/>
 
 <h3 class="subtle-section">{% t projekt.WeitereProjekte %}</h3>
 <div class="row">
-  <div class="col-lg-offset-2 col-lg-8 col-md-offset-1 col-md-10">
-    <div class="row row-flex row-flex-wrap">
-      {% assign projects = site.projects | where: "type", "featured" | sort:"featured","last" %}
-      {% assign count = 0 %}
-      {% for project in projects limit:4 %}
-        {% if project.title != page.title %}
-          {% if count < 3 %}
-            {% include project_list.html project=project style="mini" %}
-            {% assign count = count|plus:1 %}
-          {% endif %}
-        {% endif %}
-      {% endfor %}
-    </div>
-  </div>
+	<div class="col-lg-offset-2 col-lg-8 col-md-offset-1 col-md-10">
+		<div class="row row-flex row-flex-wrap">
+			{% assign projects = site.projects | where: "type", "featured" | sort:"featured","last" %}
+			{% assign count = 0 %}
+			{% for project in projects limit:4 %}
+			{% if project.title != page.title %}
+			{% if count < 3 %}
+			{% include project_list.html project=project style="mini" %}
+			{% assign count = count|plus:1 %}
+			{% endif %}
+			{% endif %}
+			{% endfor %}
+		</div>
+	</div>
 </div>
