--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,6 +2,10 @@
 layout: default
 ---
 <div class="lurking-header">
-  <h1>{{ page.title }}</h1>
-  {{ content }}
+	<h1>{{ page.title }}</h1>
+	<div class="row">
+		<div class="col-md-10 col-md-offset-1">
+			{{ content }}
+		</div>
+	</div>
 </div>
